# streamchaser

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  dynamic.yml  edgedb.toml  justfile  requirements.txt
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
app/: api.py  helpers.py  main.py  models.py  search.py
backend/: .env  Dockerfile  blacklist.txt  cli.py  main.py  movies.json  pyproject.toml  requirements.txt  trending_media.json
backend/app/: adult_content_filter.py  api.py  api_helpers.py  cli.py  config.py  cron.py  crud.py  database.py  database_service.py  main.py  models.py  schemas.py  search.py  util.py
backend/app/db/: cache.py  crud.py  database.py  database_service.py  document.py  models.py  search.py
backend/app/db/queries/: generated.py  get_countries.edgeql  get_countries_async_edgeql.py  get_genres.edgeql  get_genres_async_edgeql.py  insert_countries.edgeql  insert_countries_async_edgeql.py  insert_genres.edgeql  insert_genres_async_edgeql.py  insert_media.edgeql  insert_media_async_edgeql.py  insert_providers.edgeql  insert_user.edgeql  insert_user_async_edgeql.py  select_countries.edgeql  select_country_providers.edgeql  select_user.edgeql  select_user_custom_lists.edgeql  select_user_favorites.edgeql  select_user_providers.edgeql  select_user_watch_list.edgeql  select_user_watch_list_async_edgeql.py  update_country_providers.edgeql  update_custom_list_add.edgeql  update_custom_list_remove.edgeql  update_user_custom_lists_add.edgeql  update_user_custom_lists_remove.edgeql  update_user_favorites_add.edgeql  update_user_favorites_remove.edgeql  update_user_provider_add.edgeql  update_user_provider_remove.edgeql  update_user_watch_list_add.edgeql  update_user_watch_list_add_async_edgeql.py  update_user_watch_list_remove.edgeql  update_user_watch_list_remove_async_edgeql.py
backend/app/routers/: countries.py  country.py  custom_lists.py  favorites.py  genres.py  image.py  media.py  movie.py  person.py  providers.py  search.py  stats.py  tv.py  user.py  watch_list.py
backend/src/: api.py  api_helpers.py  cron.py  crud.py  database.py  database_service.py  helpers.py  main.py  models.py  schemas.py  search.py
backend/src/routers/: genres.py  media.py  movie.py  providers.py  search.py  tv.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_filters.py  test_media.py  test_new_meili_indexing.py  test_sort.py  test_util.py
blazing/: Dockerfile  go.mod
dbschema/: default.esdl
frontend/: .env  .eslintrc.cjs  Dockerfile  bun.lockb  node_svelte.config.js  package-lock.json  package.json  playwright.config.ts  rollup.config.js  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
go_backend/: Dockerfile  go.mod  go.sum  main.go  routes.go
go_internal/: go.mod  go.sum  main.go
internal/: Dockerfile  db.go  go.mod  go.sum  (+3 more)
rust_backend/: .dockerignore  Cargo.toml  Dockerfile
rust_backend/src/: main.rs
slowpoke/: Dockerfile  blacklist.txt  cli.py  pyproject.toml
slowpoke/app/: config.py  main.py  util.py
slowpoke/app/db/: database_service.py
slowpoke/app/routers/: country.py  genres.py  image.py  person.py  providers.py  search.py  tv.py
slowpoke/tests/: conftest.py
(+181 files in other folders)
