[tool.poetry]
name = "Streamchaser"
version = "0.1.0"
description = "Streamchaser's API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
requests = "^2.27.1"
meilisearch = "^0.18.0"
psycopg2-binary = "^2.9.3"
typer = "^0.4.0"
tqdm = "^4.62.3"
beanie = "^1.8.12"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
