[tool.poetry]
name = "Streamchaser"
version = "0.1.0"
description = "Streamchaser's API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
requests = "^2.27.1"
meilisearch = "^0.18.0"
psycopg2-binary = "^2.9.3"
typer = "^0.4.0"
tqdm = "^4.62.3"
uvicorn = "^0.17.4"
fastapi = "^0.73.0"
gunicorn = "^20.1.0"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.1"
meilisearch-python-async = "^0.22.0"
starlette-context = "^0.3.4"
fastapi-cache2 = { extras = ["redis"], version = "^0.1.9" }
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
