[tool.poetry]
name = "Streamchaser"
version = "0.1.0"
description = "Streamchaser's API"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^1.4.43"
requests = "^2.28.1"
meilisearch = "^0.18.0"
psycopg2-binary = "^2.9.5"
typer = "^0.7.0"
tqdm = "^4.64.1"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
gunicorn = "^20.1.0"
httpx = { version = "^0.22.0", extras = ["http2"] }
pytest-asyncio = "^0.20.1"
meilisearch-python-async = "^0.22.0"
starlette-context = "^0.3.4"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
