[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.8" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
tower-http = { version = "*", features = ["cors"] }
redis = { version = "0.21.5" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
